--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
-Hello World!
+---
+layout: default
+---
+
+
+
+<div class="home">
+	
+<h1>{{ site.subtitle }}</h1>
+
+{% include image.html url="/_images/how_hacking_works.png" caption="How hacking works" width=500 align="center" %}
+
+    <h1>
+    Objectives
+    </h1>
+    <hr width="80%"/>
+    <br/>
+    Learning the concepts of computer system and network security.
+    Understanding the practice of network security monitoring.
+    Gaining hands-on experience of analyzing network traces, and detecting possible threats and attacks.
+    Defending the network infrastructure by deploying and implementing intrusion detection systems, firewalls, and virtual private networks.
+    Reproducing various system and network attacks.
+
+<br/>
+<br/>
+    <i>Check the course <a href="/syllabus">Syllabus</a> for more information.</i>
+<br/>
+<br/>
+    <h1>
+    Lecture Time and Location
+    </h1>
+    <hr width="80%"/>
+    <ul>
+        <li><strong>Wednesday (9:30 AM – 10:20 AM)</strong>
+            <ul style="padding-bottom: 20px;">
+                <li>Location: AQ 5016, Burnaby </li>
+            </ul>
+        </li>
+        <li><strong>Friday (9:30 AM – 11:20 AM )</strong>
+            <ul>
+                <li>Location: SWH 10051, Burnaby</li>
+            </ul>
+        </li>
+    </ul>
+
+<br/>
+    <h1>
+        Course Staff
+    </h1>
+    <hr width="80%"/>
+    <ul>
+        <li><strong>Instructor:</strong> <a href="https://www.sfu.ca/~kdiab">Khaled Diab</a> (kdiab) </li>
+        <li><strong>Teaching Assistant:</strong> Carmen Zhuang (carmen_zhuang)</li>
+    </ul>
+
+<br/>
+    <h1>
+        Office Hours
+    </h1>
+    <hr width="80%"/>
+    <ul>
+        <li><strong>Khaled:</strong> Fridays at TASC1, room 9010
+        <ul style="padding-bottom: 10px;">
+            <li><i>Exception:</i> No office hours on Jan 10th.</li>
+        </ul>
+        </li>
+        <li><strong>Carmen:</strong> TBD </li>
+    </ul>
+
+
+</div>
