--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
 
 <br/>
 <br/>
-    <i>Check the course <a href="/syllabus">Syllabus</a> for more information.</i>
+    <i>Check the course <a href="{{site.baseurl}}/syllabus">Syllabus</a> for more information.</i>
 <br/>
 <br/>
     <h1>
