--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@ layout: default
 {% include image.html url="_images/how_hacking_works.png" caption="How hacking works" width=500 align="center" %}
 
     <h1>
-    Objectives
+    Overview
     </h1>
     <hr width="80%"/>
     <br/>
-    Learning the concepts of computer system and network security.
-    Understanding the practice of network security monitoring.
-    Gaining hands-on experience of analyzing network traces, and detecting possible threats and attacks.
-    Defending the network infrastructure by deploying and implementing intrusion detection systems, firewalls, and virtual private networks.
-    Reproducing various system and network attacks.
+    This class focuses on learning the concepts of computer system and network security.
+    Specifically, we will explore several aspects of computer security with the goal of defending complex computer systems.
+    And we believe that the best way to defend a system is to learn how to break it!
+    Thus, we will cover some of the major attack/defense techniques in a number of topics in system and network security.
+    The class will help students gain hands-on experience in security through programming assignments and a final project.
 
 <br/>
 <br/>
@@ -59,7 +59,7 @@ layout: default
     </h1>
     <hr width="80%"/>
     <ul>
-        <li><strong>Khaled:</strong> Fridays at TASC1, room 9010
+        <li><strong>Khaled:</strong> Fridays (12pm – 1pm) at TASC1, room 9010
         <ul style="padding-bottom: 10px;">
             <li><i>Exception:</i> No office hours on Jan 10th.</li>
         </ul>
