office hours and update lec1 and lec3

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: default
             <li><i>Exception:</i> No office hours on Jan 10th.</li>
         </ul>
         </li>
-        <li><strong>Carmen:</strong> TBD </li>
+        <li><strong>Carmen:</strong> Wednesdays (3pm – 4pm) at ASB, room 9808 </li>
     </ul>
 
 
