cancelling office hours on Feb 7th.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ layout: default
         <li><strong>Khaled:</strong> Fridays (12pm – 1pm) at TASC1, room 9010
         <ul style="padding-bottom: 10px;">
             <li><i>Exception:</i> No office hours on Jan 10th.</li>
+            <li><i>Exception:</i> No office hours on Feb 7th.</li>
         </ul>
         </li>
         <li><strong>Carmen:</strong> Wednesdays (3pm – 4pm) at ASB, room 9808 </li>
