extra office hours

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ layout: default
         <ul style="padding-bottom: 10px;">
             <li><i>Exception:</i> No office hours on Jan 10th.</li>
             <li><i>Exception:</i> No office hours on Feb 7th.</li>
+            <li><i>Exception:</i> Additional office hours on Feb 10th (12pm – 1pm, Location is T1 9005.1)</li>
         </ul>
         </li>
         <li><strong>Carmen:</strong> Wednesdays (3pm – 4pm) at ASB, room 9808 </li>
