lectures and blog post

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@ layout: default
 
 
 <div class="home">
-	
+
+    <div class="alert-notify">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+  <b>
+        Starting March 18th, the course is moving away from face-to-face classes and office hours to slow the spread of COVID-19.
+      </b>
+</div>
+
 <h1>{{ site.subtitle }}</h1>
 
 {% include image.html url="_images/how_hacking_works.png" caption="How hacking works" width=500 align="center" %}
@@ -25,20 +32,25 @@ layout: default
 <br/>
     <i>Check the course <a href="{{site.baseurl}}/syllabus">Syllabus</a> for more information.</i>
 <br/>
+
+
+
 <br/>
     <h1>
     Lecture Time and Location
     </h1>
     <hr width="80%"/>
+    All classes are <a href="https://canvas.sfu.ca/courses/52241/external_tools/3544">online</a>.
     <ul>
         <li><strong>Wednesday (9:30 AM – 10:20 AM)</strong>
             <ul style="padding-bottom: 20px;">
-                <li>Location: AQ 5016, Burnaby </li>
+                <s><li>Location: AQ 5016, Burnaby </li></s>
+
             </ul>
         </li>
         <li><strong>Friday (9:30 AM – 11:20 AM )</strong>
             <ul>
-                <li>Location: SWH 10051, Burnaby</li>
+                <s><li>Location: SWH 10051, Burnaby</li></s>
             </ul>
         </li>
     </ul>
@@ -58,16 +70,20 @@ layout: default
         Office Hours
     </h1>
     <hr width="80%"/>
+    The office hours are done via Skype.<br/>
+    Please check this <a href="https://piazza.com/class/k4zaj6ke4lm64r?cid=58">post</a> for more information.
+    <br/>
     <ul>
-        <li><strong>Khaled:</strong> Fridays (12pm – 1pm) at TASC1, room 9010
+        <li><strong>Khaled:</strong> Fridays (12pm – 1pm) <s>at TASC1, room 9010</s>
         <ul style="padding-bottom: 10px;">
             <li><i>Exception:</i> No office hours on Jan 10th.</li>
             <li><i>Exception:</i> No office hours on Feb 7th.</li>
             <li><i>Exception:</i> Additional office hours on Feb 10th (12pm – 1pm, Location is T1 9005.1)</li>
         </ul>
         </li>
-        <li><strong>Carmen:</strong> Wednesdays (3pm – 4pm) at ASB, room 9808 </li>
+        <li><strong>Carmen:</strong> Wednesdays (3pm – 4pm) <s>at ASB, room 9808</s> </li>
     </ul>
+
 
 
 </div>
